BehaviorSubject logic code added

--- a/src/app/components/add-user/add-user.component.html
+++ b/src/app/components/add-user/add-user.component.html
@@ -1,3 +1,9 @@
+<button class="btn btn-primary" (click)="increment()">
+  Increse count {{ currentCount }}
+</button>
+<button class="btn btn-primary" (click)="decrement()">
+  Decrement count {{ currentCount }}
+</button>
 <div class="card m-3">
   <h5 class="card-header">Use Details</h5>
   <div class="card-body">
