--- a/src/app/components/parent/p-child/p-child.component.html
+++ b/src/app/components/parent/p-child/p-child.component.html
@@ -1,2 +1,10 @@
 <p>p-child works!</p>
 {{ childMessage }}
+<button
+  type="button"
+  class="btn-primary"
+  name="SendMessage"
+  (click)="sendMessage()"
+>
+  SendMessage
+</button>
